--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+colorama = "^0.4.6"
 
+[tool.poetry.scripts]
+say-hello = "hello.scripts.say_hello:main"
+
+[tool.poetry.group.dev.dependencies]
+ipython = "^8.10.0"
 
 [build-system]
 requires = ["poetry-core"]
